@@ -752,10 +752,15 @@ bool CD3D8Driver::setRenderTarget(video::ITexture* texture,
 
 
 //! Creates a render target texture.
-ITexture* CD3D8Driver::createRenderTargetTexture(
+ITexture* CD3D8Driver::addRenderTargetTexture(
 		const core::dimension2d<s32>& size, const c8* name)
 {
-	return new CD3D8Texture(this, size, name);
+	if (!name)
+		name="rt";
+	ITexture* tex = new CD3D8Texture(this, size, name);
+	addTexture(tex);
+	tex->drop();
+	return tex;
 }
 
 
